# TLTrading

./: .env.example  .gitignore  LICENSE  README.md  github-recovery-codes.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  prompts.md  runbook.md  safety_policy.md  step6_signing.md  windows_runtime.md
gui/: app.js  index.html  style.css
models/: README.md
runtime/: .env.example
runtime/data/inputs/: headlines.txt
runtime/state/news_samples/: energy_supply.json  market_macro.json  tech_earnings.json
scripts/: _load_env.ps1  bootstrap_portable.ps1  generate_keys.ps1  health_check.ps1  keygen.ps1  portable_shell.ps1  reset_runtime.ps1  rotate_keys.ps1  rotate_logs.ps1  run_all.ps1  run_api.ps1  run_daemon.ps1  run_gui.ps1  run_llama_server.ps1  setup_windows.ps1  smoke_test.ps1  start_api.ps1  start_api_bg.ps1  start_llm_bg.ps1  start_stack.ps1  status_check.ps1  stop_api.ps1  stop_llm.ps1
src/thelighttrading.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/thelighttrading/api/: routes.py  server.py
src/thelighttrading/cli/: main.py
src/thelighttrading/config/: logging.yaml  settings.py
src/thelighttrading/execution/: __init__.py  sandbox.py
src/thelighttrading/inputs/: news_ingest.py
src/thelighttrading/llm_router/: llama_http_client.py  mock_llm.py  profiles.py  router.py
tests/: test_gui_and_api.py  test_pipeline_mock.py  test_policy_and_execution.py  test_router_mock.py  test_signing.py  test_step13_local_pipeline_contract.py  test_step4.py  test_validators_replay.py
(+24 files in other folders)
